--- a/main.html
+++ b/main.html
@@ -3,11 +3,11 @@
 <head>
 
 <meta charset="EUC-KR">
-<title>µÎ·çµÎ·ç</title>
+<title>ë‘ë£¨ë‘ë£¨</title>
 
 <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-<link rel="stylesheet" type="text/css" href="./main.css" />
-<link rel="stylesheet" type="text/css" href="./default.css" /> <!-- ½½¶óÀÌµå jquery ¶óÀÌºê·¯¸® -->
+<link rel="stylesheet" type="text/css" href="./CSS/main.css" />
+<link rel="stylesheet" type="text/css" href="./CSS/default.css" /> <!-- ìŠ¬ë¼ì´ë“œ jquery ë¼ì´ë¸ŒëŸ¬ë¦¬ -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script><
 <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
@@ -15,12 +15,12 @@
 <body>
 <div id="wrap">
 <header>
-	<h1><a href="#a">µÎ·çµÎ·ç</a></h1>
+	<h1><a href="#a">ë‘ë£¨ë‘ë£¨</a></h1>
 	
-	<h2 class="hode">°Ë»öÃ¢</h2>
+	<h2 class="hode">ê²€ìƒ‰ì°½</h2>
 	<div class="search">
 		<form>
-			<input type="text" placeholder="¿øÇÏ´Â Àå¼Ò¸¦ °Ë»öÇØº¸¼¼¿ä!">
+			<input type="text" placeholder="ì›í•˜ëŠ” ìž¥ì†Œë¥¼ ê²€ìƒ‰í•´ë³´ì„¸ìš”!">
 				<span>
 			<input type="submit">
 		</span>
@@ -29,45 +29,45 @@
 	
 	<nav class="nav">
 		<ul>
-			<li><a href="*">°ø°£ µî·ÏÇÏ±â</a></li>
+			<li><a href="*">ê³µê°„ ë“±ë¡í•˜ê¸°</a></li>
 		</ul>
 	</nav>
 	
-	<h2 class="hide">Åä±Û ¸Þ´º</h2>
+	<h2 class="hide">í† ê¸€ ë©”ë‰´</h2>
 </header>
-	<h2 class="hide">±¤°í ¿µ¿ª</h2>
+	<h2 class="hide">ê´‘ê³  ì˜ì—­</h2>
 <section class="visual">
 	
 		<div class="slide" 
 		style="background:url('./img/main-banner4.png') no-repeat 0px 0px;">
 			<div class="txt">
-				<p>µ¶¼­ ¸ðÀÓ °ø°£ ÃßÃµ</p>
-				±í¾îÁö´Â °¡À»<br>
-		                µ¶¼­·Î ¸¶À½À» Ç³¼ºÇÏ°Ô 
+				<p>ë…ì„œ ëª¨ìž„ ê³µê°„ ì¶”ì²œ</p>
+				ê¹Šì–´ì§€ëŠ” ê°€ì„<br>
+		                ë…ì„œë¡œ ë§ˆìŒì„ í’ì„±í•˜ê²Œ 
 			</div>
 		</div>
 		
 		<div class="slide"  style="background:url('./img/CAFE1.png') no-repeat 0px 0px;">
 			<div class="txt">
-				<p>ÁýÁß Àß µÇ´Â ½ºÅÍµð ·ë</p>
-				ÇÏ·çÁ¾ÀÏ <br>
-		                °øºÎ ÇÒ °ø°£ÀÌ ÇÊ¿äÇÏ´Ù¸é
+				<p>ì§‘ì¤‘ ìž˜ ë˜ëŠ” ìŠ¤í„°ë”” ë£¸</p>
+				í•˜ë£¨ì¢…ì¼ <br>
+		                ê³µë¶€ í•  ê³µê°„ì´ í•„ìš”í•˜ë‹¤ë©´
 			</div>
 		</div>
 		
 		<div class="slide"  style="background:url('./img/main-banner3.png') no-repeat 0px 0px;">
 			<div class="txt">
-				<p>¿öÅ©¼ó °ø°£ ´ë¿©</p>
-				ÆÀ ¿öÅ©¼óÀ» À§ÇÑ<br>
-		                ÇÁ¶óÀÌºøÇÑ °ø°£ 
+				<p>ì›Œí¬ìˆ ê³µê°„ ëŒ€ì—¬</p>
+				íŒ€ ì›Œí¬ìˆì„ ìœ„í•œ<br>
+		                í”„ë¼ì´ë¹—í•œ ê³µê°„ 
 			</div>
 		</div>
 		
 		<div class="slide"  style="background:url('./img/main-banner2.png') no-repeat 0px 0px;">
 			<div class="txt">
-				<p>¾Æ¸§´Ù¿î Ä«Æä</p>
-				¿Ã °¡À» ¼ÒÁßÇÑ »ç¶÷µé°ú<br>
-		                Ãß¾ïÀ» ½×°í ½Í´Ù¸é
+				<p>ì•„ë¦„ë‹¤ìš´ ì¹´íŽ˜</p>
+				ì˜¬ ê°€ì„ ì†Œì¤‘í•œ ì‚¬ëžŒë“¤ê³¼<br>
+		                ì¶”ì–µì„ ìŒ“ê³  ì‹¶ë‹¤ë©´
 			</div>
 		</div>
 		
@@ -77,36 +77,36 @@
 	</script>
 	
 <section class="select">
-<h2>¾î¶² °ø°£À» Ã£°í ÀÖ³ª¿ä?</h2>
+<h2>ì–´ë–¤ ê³µê°„ì„ ì°¾ê³  ìžˆë‚˜ìš”?</h2>
 <div class="select-list">
-	<h2 class="hide">°ø°£ À¯Çü</h2>
+	<h2 class="hide">ê³µê°„ ìœ í˜•</h2>
 	<ul>
 		<li>
-			<a href="#a">¿¥Æ¼ Àå¼Ò</a>
+			<a href="#a">ì— í‹° ìž¥ì†Œ</a>
 		</li>
 		<li>
-			<a href="#a">ÆÄÆ¼·ë</a>
+			<a href="#a">íŒŒí‹°ë£¸</a>
 		</li>
 		<li>
-			<a href="#a">Ä«Æä</a>
+			<a href="#a">ì¹´íŽ˜</a>
 		</li>
 		<li>
-			<a href="#a">½ºÅÍµð·ë</a>
+			<a href="#a">ìŠ¤í„°ë””ë£¸</a>
 		</li>
 		<li>
-			<a href="#a">¿¬½À½Ç</a>
+			<a href="#a">ì—°ìŠµì‹¤</a>
 		</li>
 		<li>
-			<a href="#a">È¸ÀÇ½Ç</a>
+			<a href="#a">íšŒì˜ì‹¤</a>
 		</li>
 		<li>
-			<a href="#a">ÇÑ¿Á</a>
+			<a href="#a">í•œì˜¥</a>
 		</li>
 		<li>
-			<a href="#a">ÀÛ¾÷½Ç</a>
+			<a href="#a">ìž‘ì—…ì‹¤</a>
 		</li>
 		<li>
-			<a href="#a">ÃÔ¿µ½ºÆ©µð¿À</a>
+			<a href="#a">ì´¬ì˜ìŠ¤íŠœë””ì˜¤</a>
 		</li>
 		
 	
@@ -116,7 +116,7 @@
 
 <section>
 	<div>
-		<h2>¿À´ÃÀÇ ÃßÃµ °ø°£</h2>
+		<h2>ì˜¤ëŠ˜ì˜ ì¶”ì²œ ê³µê°„</h2>
 		
 	</div>
 </section>
