--- a/main.html
+++ b/main.html
@@ -6,8 +6,8 @@
 <title>두루두루</title>
 
 <link rel="stylesheet" type="text/css" href="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
-<link rel="stylesheet" type="text/css" href="./CSS/main.css" />
-<link rel="stylesheet" type="text/css" href="./CSS/default.css" /> <!-- 슬라이드 jquery 라이브러리 -->
+<link rel="stylesheet" type="text/css" href="./css/main.css" />
+<link rel="stylesheet" type="text/css" href="./css/default.css" /> <!-- 슬라이드 jquery 라이브러리 -->
 <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script><
 <script type="text/javascript" src="http://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
 
